test/data/codegen/valid/mixed_read_write_batch_v6/queries.cypher
// name: GetPersonName :one
MATCH (p:Person) WHERE p.id = $id RETURN p.name AS name

// name: RemovePerson :exec
MATCH (p:Person) WHERE p.id = $id DELETE p
