test/data/codegen/invalid/exec_on_projection_read/queries.cypher
// name: ExecReadProjection :exec
MATCH (p:Person) RETURN p.id AS id
